# mandates-core-python

./: LICENSE.md  README.md  pyproject.toml
mandates_core/: __init__.py  mandate.py  primitives.py  utils.py
tests/: test_mandate.py  test_mandate_tamper.py  test_primitives.py
